--- a/src/index.css
+++ b/src/index.css
@@ -17,19 +17,71 @@ body,
   overflow-y: overlay;
 }
 
+.list-move, /* 对移动中的元素应用的过渡 */
+.list-enter-active,
+.list-leave-active {
+  transition: all 0.5s ease;
+}
+
+.list-enter-from,
+.list-leave-to {
+  opacity: 0;
+  transform: translateX(30px);
+}
+
+/* 确保将离开的元素从布局流中删除
+  以便能够正确地计算移动的动画。 */
+.list-leave-active {
+  position: absolute;
+}
+
 @layer components {
   .btn-red {
-    @apply w-24 h-8 mx-2 bg-red-400 text-white rounded transition-all duration-500 ease-in-out   dark:bg-red-300 dark:text-black hover:bg-red-600 dark:hover:bg-red-500;
+    @apply w-24 h-8 mx-2 bg-red-400 text-white rounded transition-all duration-500 ease-in-out hover:bg-red-600 select-none;
   }
   .btn-blue {
-    @apply w-24 h-8 mx-2 text-white rounded bg-blue-400 transition-all duration-500 ease-in-out hover:bg-blue-600  dark:bg-blue-300 dark:text-black dark:hover:bg-blue-500;
+    @apply w-24 h-8 mx-2 text-white rounded bg-blue-400 transition-all duration-500 ease-in-out hover:bg-blue-600  dark:bg-blue-300 dark:text-black dark:hover:bg-blue-500 select-none;
   }
   .btn-opacity-small {
-    @apply w-16 h-6 text-xs  text-black rounded bg-opacity-0 ring-1 ring-gray-500 transition-all duration-500 ease-in-out hover:bg-gray-100  dark:text-gray-300 dark:hover:bg-deepBlack;
+    @apply w-16 h-6 text-xs  text-black rounded bg-opacity-0 ring-1 ring-gray-500 transition-all duration-500 ease-in-out hover:bg-gray-100  dark:text-gray-300 dark:hover:bg-deepBlack select-none;
+  }
+  .btn-red-large {
+    @apply w-24 h-10 mx-2  text-white rounded bg-red-400  transition-all duration-500 ease-in-out  hover:bg-red-600 select-none;
+  }
+  .btn-blue-large {
+    @apply w-24 h-10 mx-2   text-white rounded bg-blue-400  transition-all duration-500 ease-in-out  hover:bg-blue-600 select-none;
+  }
+  .btn-gray-auto {
+    @apply min-w-min h-10 px-2 ml-8 bg-gray-100 text-gray-500 hover:bg-red-500 transition-all duration-500 ease-in-out rounded hover:text-gray-300 select-none;
   }
   .ct-bg {
     @apply absolute top-0 mt-20 flex flex-col items-center min-w-full bg-opacity-0 transition-all duration-500 ease-in-out dark:text-gray-300;
   }
+  .input-focus {
+    @apply focus:outline-none focus:ring-1 focus:ring-gray-500 focus:border-transparent transition-all duration-500 ease-in-out;
+  }
+  .show-none {
+    @apply flex justify-center items-center mt-8;
+  }
+  .divider {
+    @apply p-0 mx-4 border-t border-gray-300 dark:border-gray-700;
+  }
+  .divider-vertical {
+    @apply p-0 mx-4  border-r border-gray-300 dark:border-gray-700;
+  }
+  .navBar {
+    @apply mb-4 flex;
+  }
+  .navBar > span {
+    @apply text-center text-sm p-4   transition-all duration-300 ease-in-out hover:bg-blue-50 dark:hover:bg-gray-700 hover:cursor-pointer;
+  }
+  .activeNav {
+    @apply font-bold  border-b-2 border-blue-300;
+  }
+  .avatar-small {
+    @apply h-8 w-8 mx-4 rounded-full border border-gray-300 hover:outline-none hover:ring-1 hover:ring-blue-500 transition-all duration-300 ease-in-out;
+  }
+
   /* pre {
     @apply bg-gray-200 border-solid border-2 rounded-lg;
   } */
