--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body,
     @apply min-w-min h-10 px-2 ml-8 bg-gray-100 text-gray-500 hover:bg-red-500 transition-all duration-500 ease-in-out rounded hover:text-gray-300 select-none;
   }
   .ct-bg {
-    @apply absolute top-0 mt-20 flex flex-col items-center min-w-full bg-opacity-0 transition-all duration-500 ease-in-out dark:text-gray-300;
+    @apply absolute top-0 mt-20 flex flex-col items-center min-w-full bg-gray-50 dark:bg-opacity-0  dark:text-gray-300;
   }
   .input-focus {
     @apply focus:outline-none focus:ring-1 focus:ring-gray-500 focus:border-transparent transition-all duration-500 ease-in-out;
